<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="gravarConfigPosicao020" Id="{e1099183-6821-4b8d-af38-c80e245213ce}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM gravarConfigPosicao020
VAR
	bReator: ARRAY[0..2] OF BOOL;
	posicaoAtual: STRING;
	enviaLog: STRING;
	estufaAtual: STRING;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
// VERIFICA SE HA REATOR E MUDA A COR DO QUADRADO ------------------------------------
IF bReator[1] THEN
	gvl_p.aPositionsE020[gvl.actPos].cor:= 1;
	gvl_p.bCarrinhoReator2:=TRUE;
	gvl.cfgPos_Reat020:=TRUE;
	ELSE
		gvl_p.aPositionsE020[gvl.actPos].cor:=2;
		gvl_p.bCarrinhoReator2:=FALSE;
		gvl.cfgPos_Reat020:=FALSE;
END_IF

// REGISTRA AS INFORMAÇÕES EM CADA POSIÇÃO -------------------------------------------------------------
FOR gvl.n:=1 TO 24 BY 1 DO
	IF gvl.actPos = gvl.n THEN
		gvl_p.aPositionsE020[gvl.n].numOF:= gvl.cfgPos_OF020;
		gvl_p.aPositionsE020[gvl.n].lote:= gvl.cfgPos_LT020;
		gvl_p.aPositionsE020[gvl.n].class:= gvl.cfgPos_Class020;
		gvl_p.aPositionsE020[gvl.n].pot:= gvl.cfgPos_Pot020;
		gvl_p.aPositionsE020[gvl.n].reator:= gvl.cfgPos_Reat020;
	END_IF
END_FOR

// DEFINIÇÃO DOS TEMPOS DE ACORDO COM AS CLASSES ----------------------------------------------
IF gvl_p.aPositionsE020[gvl.actPos].class <= 15 THEN
		GVL_p.arrStatusEstufas[gvl.actEst].tempoSecagem := T#60H;
		GVL_p.arrStatusEstufas[gvl.actEst].tempoArmazenagem := T#192H;
		gvl.totalSeca[1]:= '60';
		gvl_p.arrStatusEstufas[gvl.actEst].tempSeca:= 120;
		gvl.totalArm[1]:= '192';
		gvl_p.arrStatusEstufas[gvl.actEst].tempArm:= 70;
		ELSIF gvl_p.aPositionsE020[gvl.actPos].class > 15 THEN
			GVL_p.arrStatusEstufas[gvl.actEst].tempoSecagem:= T#96H;
			GVL_p.arrStatusEstufas[gvl.actEst].tempoArmazenagem:= T#240H;
			gvl.totalSeca[1]:= '96';
			gvl_p.arrStatusEstufas[gvl.actEst].tempSeca:= 120;
			gvl.totalArm[1]:= '240';
			gvl_p.arrStatusEstufas[gvl.actEst].tempArm:= 70;
END_IF

gvl.totalPos[gvl.actEst]:= gvl.totalPos[gvl.actEst] + 1;

///// GERADOR DE LOG -------------------------------------------------------------

posicaoAtual:= INT_TO_STRING(gvl.actPos);
envialog:= 'Posição Nº ';
enviaLog:= concat(envialog, posicaoAtual);
enviaLog:= concat(envialog,' gravada.  ESTUFA 020');
gvl.logRegister19:= envialog;

]]></ST>
    </Implementation>
    <LineIds Name="gravarConfigPosicao020">
      <LineId Id="104" Count="1" />
      <LineId Id="86" Count="7" />
      <LineId Id="84" Count="0" />
      <LineId Id="106" Count="0" />
      <LineId Id="15" Count="3" />
      <LineId Id="118" Count="0" />
      <LineId Id="120" Count="0" />
      <LineId Id="173" Count="0" />
      <LineId Id="124" Count="0" />
      <LineId Id="23" Count="1" />
      <LineId Id="107" Count="0" />
      <LineId Id="25" Count="0" />
      <LineId Id="129" Count="13" />
      <LineId Id="127" Count="0" />
      <LineId Id="158" Count="0" />
      <LineId Id="58" Count="0" />
      <LineId Id="73" Count="0" />
      <LineId Id="41" Count="0" />
      <LineId Id="65" Count="0" />
      <LineId Id="50" Count="0" />
      <LineId Id="57" Count="0" />
      <LineId Id="51" Count="1" />
      <LineId Id="56" Count="0" />
      <LineId Id="53" Count="0" />
      <LineId Id="48" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>